--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,11 @@
 	      <name>Landmark Technologies Releases Nexus Repository</name>
 	      <url>http://http://172.31.5.96:8081/repository/twitter-webreleases/</url>
 	    </repository>
+	    <snapshotRepository>
+	      <id>nexus</id>
+	      <name>Landmark Technologies Snapshot Nexus Repository </name>
+	      <url>http://http://172.31.5.96:8081/repository/twitter-fesnapshot/</url>
+	    </snapshotRepository>
 	   
        </distributionManagement>
 	
